# power-trading

./: .dockerignore  .gitignore  Dockerfile  README.MD  app.py  main.py  pyproject.toml  requirements.txt
data/: README.md  datapackage.json
models/model_v1_3_w12h/: model_v1_3_w12h.keras  model_v1_3_w12h_config.json  model_v1_3_w12h_history.pkl
models/model_v1_4_w12h/: model_v1_4_w12h.keras  model_v1_4_w12h_config.json  model_v1_4_w12h_history.pkl
models/model_v1_5_w12h_1h_ahead/: model_v1_5_w12h_1h_ahead.keras  model_v1_5_w12h_1h_ahead_config.json  model_v1_5_w12h_1h_ahead_history.pkl
models/model_v1_5_w12h_24h_ahead/: model_v1_5_w12h_24h_ahead_config.json
models/model_v1_6_w12h_1h_ahead/: model_v1_6_w12h_1h_ahead.keras  model_v1_6_w12h_1h_ahead_config.json  model_v1_6_w12h_1h_ahead_history.pkl
models/model_v1_7_w12h_1day_ahead/: model_v1_7_w12h_1day_ahead.keras  model_v1_7_w12h_1day_ahead_config.json  model_v1_7_w12h_1day_ahead_history.pkl
models/model_v1_7_w12h_1h_ahead/: config.json  model.keras  model_v1_7_w12h_1h_ahead.keras  model_v1_7_w12h_1h_ahead_config.json
src/: config_tools.py  data_tools.py  model_tools.py  plot.py
src/app/: app_config.py  load.py
src/app/pages/: home.py  model_description.py  results.py  train_and_validation.py  training_history.py
src/libs/: config_tools.py  data_tools.py  model_tools.py  model_train.py  plot.py  processing_chain.py
