[project]
name = "power-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "humanize==4.15.0",
    "nbformat==5.10.4",
    "numpy==2.1",
    "pandas==2.3.3",
    "plotly==6.6.0",
    "streamlit==1.55.0",
    "keras==3.14.0",
    "jax==0.9.2"
]
[dependency-groups]
dev = [
    "ipykernel==7.1.0",
    "ipython==9.11.0",
    "matplotlib==3.10.7",
]
